maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: not found: type int
def avance(x:int,y:int)  {
             ^ShortestPathMaze:15: error: not found: type int
def avance(x:int,y:int)  {
                   ^ShortestPathMaze:9: error: not found: value sortie
    avance(sortie) 
           ^ShortestPathMaze:16: error: not found: value n
  n=getIndication(x,y)
  ^ShortestPathMaze:17: error: not found: value aMurSud
  if (!aMurSud(x,y)&& getIndication(x,y-1)!=null)
       ^ShortestPathMaze:18: error: not found: value n
                {setIndication(x,y-1,n+1)}
                                     ^ShortestPathMaze:20: error: not found: value n
                {setIndication(x,y+1,n+1)}
                                     ^ShortestPathMaze:22: error: not found: value n
                {setIndication(x-1,y,n+1)}
                                     ^ShortestPathMaze:23: error: not found: value aMurEst
  if (!aMurEst(x,y)&& getIndication(x+1,y)!=null)
       ^ShortestPathMaze:24: error: not found: value n
                {setIndication(x+1,y,n+1)}             
                                     ^